@startuml GR
!include https://raw.githubusercontent.com/fredoslav2004/MinimalThemePUML/refs/heads/main/minimal-theme.puml
scale 1

title Global Relations Diagram

class Course
{
    id {PK}
    language {FK}
    title
    description
    category {FK}
    author_id {FK}
    approved_by {FK}
    total_steps
}

class CourseCategory
{
    id {PK}
    name
    description
}

class Language
{
    code {PK}
    name
}

class SystemUser
{
    id {PK}
    username
    password_hash
}

class Role
{
    role {PK}
}

class SystemUserRole
{
    systemUserId {PPK, FK}
    role {PPK, FK}
}

class LearningStepType
{
    id {PK}
    name
}

class LearningStep
{
    step_order {PPK}
    course {PPK, FK}
    type {FK}
    content
}

   
class UserCourseProgress
{
    user_id {PPK, FK}
    course_id {PPK, FK}
    current_step
}

Course "0..*" -- "1" CourseCategory : belongs to ▶
Course "0..*" -- "1" Language : is in ▶
SystemUser "1" -- "0..*" SystemUserRole : includes ▲
SystemUserRole "0..*" -- "1" Role : includes ▼
Course "0..*" -- "1" SystemUser : approved_by ▼
Course "0..*" -- "1" SystemUser : created_by ▼


SystemUser "1" -- "0..*" UserCourseProgress : has progress ▼
Course "1" -- "0..*" UserCourseProgress : tracked in ▲
LearningStep "1..*" -- "1" Course : belongs to ▼
LearningStep "0..*" -- "1" LearningStepType : is of type ▼
